--- a/template/styles/thread_style.css
+++ b/template/styles/thread_style.css
@@ -84,6 +84,19 @@
     background-repeat: no-repeat;
     height: 16px;
 }
+.thread input
+{
+    display:none;
+    margin-left: -2px;
+}
+.thread textarea
+{
+    display:none;
+}
+.thread label
+{
+    font-size: 10pt;
+}
 
 .thread .column .down_arrow
 {
@@ -99,4 +112,6 @@
 }
 .thread td
 {
+    border-style:solid;
+    border-width: 1px;
 }
